@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2012-06-24 r59621) -- "Unsuffered Consequences"
+R Under development (unstable) (2012-06-25 r59637) -- "Unsuffered Consequences"
 Copyright (C) 2012 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 Platform: x86_64-unknown-linux-gnu (64-bit)
@@ -6955,4 +6955,57 @@ Error in array(1, integer(), list(1, 2)) : 'dims' cannot be of length 0
 <0 x 0 matrix>
  logi[0 , 0 ] 
 > ## first failed in R 2.15.1, second gave NULL
+> 
+> 
+> ## split() with dots in levels
+> df <- data.frame(x = rep(c("a", "a.b"), 3L), y = rep(c("b.c", "c"), 3L),
++                  z = 1:6)
+> df
+    x   y z
+1   a b.c 1
+2 a.b   c 2
+3   a b.c 3
+4 a.b   c 4
+5   a b.c 5
+6 a.b   c 6
+> split(df, df[, 1:2]) # default is sep = "."
+$a.b.c
+    x   y z
+1   a b.c 1
+2 a.b   c 2
+3   a b.c 3
+4 a.b   c 4
+5   a b.c 5
+6 a.b   c 6
+
+$a.b.b.c
+[1] x y z
+<0 rows> (or 0-length row.names)
+
+$a.c
+[1] x y z
+<0 rows> (or 0-length row.names)
+
+> split(df, df[, 1:2], sep = ":")
+$`a:b.c`
+  x   y z
+1 a b.c 1
+3 a b.c 3
+5 a b.c 5
+
+$`a.b:b.c`
+[1] x y z
+<0 rows> (or 0-length row.names)
+
+$`a:c`
+[1] x y z
+<0 rows> (or 0-length row.names)
+
+$`a.b:c`
+    x y z
+2 a.b c 2
+4 a.b c 4
+6 a.b c 6
+
+> ##
 > 
